--- a/profile/landing.css
+++ b/profile/landing.css
@@ -1,6 +1,8 @@
 html {
-  background-color: #3a3a3f;
-  font-family: "Montserrat", sans-serif;
+  font-family: Tahoma, Geneva, sans-serif;
+  color: #fff;
+  background: url(bg2.png);
+  background-size: cover;
 }
 .profile {
   width: 25%;
