--- a/login_registration/signup.css
+++ b/login_registration/signup.css
@@ -7,8 +7,8 @@ body {
 .signup {
 	background: rgba(44, 52, 80, 0.7);
 	padding: 40px;
-	width: 250px;
-	height: 430px;
+	width: 320px;
+	height: 630px;
 	margin-top: 90px;
 	margin-left: 180px;
 	margin: 0 auto;
@@ -41,6 +41,7 @@ input[type=button] {
 	padding: 10px 0;
 	border-radius: 15px;
 	cursor: pointer;
+	margin-top: 20px;
 }
 input[type=button]:hover {
 	color: #fff;
@@ -53,3 +54,34 @@ h2 {
 	color: white;
 	opacity: 0.8;
 }
+ul {
+	margin: 0px;
+	padding: 0px;
+	list-style: none;}
+ul li {
+	float: left;
+	width: 200px;
+	height: 40px;
+	background-color: white;
+	opacity: .8;
+	line-height: 40px;
+	text-align: center;
+	margin-left: 20px;
+}
+ul li a {
+	text-decoration: none;
+	color: white;
+	display: block;
+}
+ul li a:hover {
+	background-color: red;
+}
+ul li ul li {
+	display: none;
+}
+ul li:hover ul li {
+	display: block;
+}
+/*a[class=dropdown] {
+	margin-left: 20px;
+}*/
