--- a/tree/tree.css
+++ b/tree/tree.css
@@ -1,18 +1,19 @@
 body{
-    font-size: 1rem;
-    background: url(bg2.png);
+    font-size: 10rem;
+    background: url(g.jpg);
+    margin-top: 20px;
+    padding: 10px;
 }
 
 .tree{
-    position: relative;
+    position: absolute;
     background: white;
-    margin-top: 20px;
-    padding: 30px;
     font-family: 'Roboto Mono', monospace;
     font-size: .85rem;
     font-weight: 400;
     line-height: 1.5;
     color:#212529;
+    margin-left: 380px;
 }
 
 .tree span{
@@ -32,7 +33,7 @@ body{
 }
 
 .tree ul{
-    padding-left: 5px;
+    padding-left: 35px;
     list-style: none;
 }
 
@@ -40,7 +41,17 @@ body{
     position: relative;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 15px;
+    padding-left: 35px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing:border-box;
+    box-sizing: border-box;
+}
+
+.tree ul li ul li {
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing:border-box;
     box-sizing: border-box;
@@ -82,6 +93,73 @@ body{
     text-decoration: none;
 }
 
+.box2 {
+    margin-left: 5px;
+}
+
+input[type=checkbox] {
+    position: relative;
+    height: 18px;
+    width: 36px;
+    background: white;
+    outline: none;
+    cursor: pointer;
+    border-radius: 20px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, .2);
+    -webkit-appearance: none;
+    transition: .5s;
+}
+input[type=checkbox]:before {
+    content: '';
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    border-radius: 20px;
+    top: 0;
+    left: 0;
+    transform: scale(.85);
+    background: linear-gradient(#fff, #f2f2f2, #e6e6e6, #d9d9d9);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
+    transition: .5s;
+
+}
+input:checked[type=checkbox] {
+    background: red;
+}
+input:checked[type="checkbox"]:before{
+    left: 18px;
+}
+input[type=button] {
+    border: none;
+    width: 90px;
+    background: red;
+    color: #000;
+    font-size: 16px;
+    line-height: 15px;
+    padding: 10px 0;
+    border-radius: 15px;
+    cursor: pointer;
+    margin-left: 50px;
+}
+.button-container {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.btn-primary {
+    background-color: red;
+}
+
+.btn-primary:hover {
+    background-color: #563d7c;
+}
+.btn {
+    font-size: 95%;
+    padding: 8px 14px;
+    margin-left: 350px;
+    margin-bottom: 50px;
+    border-radius: 15px;
+}
 /*body {
 	background: url(bg.jpg);
 	margin: 0;
