--- a/profile/profile.css
+++ b/profile/profile.css
@@ -14,7 +14,7 @@ b {
 	width: 400px;
 	margin: auto;
 	/*margin: 10px;*/
-	background-color: #fff;
+	background-color: #d6d6c2;
 	box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.5);
 }
 .image-container {
