--- a/skill-levels/levels.css
+++ b/skill-levels/levels.css
@@ -1,4 +1,59 @@
-* {
+body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: #262626;
+}
+.center {
+    width: 40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background: #333;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, .5)
+}
+h1 {
+    margin: 0;
+    padding: 0;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.skillBox {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 20px 0;
+}
+.skillBox p {
+    color: #fff;
+    text-transform: uppercase;
+    margin: 0 0 10px;
+    padding: 0;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+.skillBox p:nth-child(2) {
+    float: right;
+    position: relative;
+    top: -25px;
+}
+.skill {
+    background: #262626;
+    padding: 4px;
+    box-sizing: border-box;
+    border: 1px solid #ff1a1a;
+    border-radius: 2px;
+}
+.skill_level {
+    background: #ff1a1a;
+    width: 100%;
+    height: 10px;
+}
+
+/** {
 	font-family: sans-serif;
 	list-style: none;
 	padding: 0;
@@ -127,16 +182,4 @@ input[type=button] {
     margin-bottom: 0px;
     border-radius: 15px;
 }
-/*.table{
-	text-align:center;
-}
-.table-title{
-	font-size:2em;
-}
-.progress{
-	margin-top: 3%;
-	height:50px;
-}
-html{
-	padding:30px;
-}*/
+*/
